fix: :bug: remove horizontal scroll on mobile view, add highlight to title and form to allow for readability

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,6 @@ label[for=id_due_by] {
 
     @media (max-width: 504px) {
         margin-top: 1.45rem;
-        margin-right: 11rem;
     }
 }
 
